--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         android:drawableEnd="@drawable/ic_baseline_photo_camera_24"
         android:text="Capture an Image"
         android:id="@+id/fab"
+        android:backgroundTint="#FFC100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
